ansible/playbooks/files/k8s-manifests/online-boutique-am/issueGenerators/2.cartservice-slowdown-vs.yaml
##################################################################################################
# Ratings Slow-Down Rule
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cartservice-delay
  namespace: online-boutique-am
spec:
  hosts:
    - cartservice.online-boutique-am.svc.cluster.local
  http:
    - fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 500ms
      route:
        - destination:
            host: cartservice.online-boutique-am.svc.cluster.local
